2007-02-13  Brian Granger <ellisonbg@gmail.com>

	* Now the registerEngine method of the ControllerService takes the
	ip, port and pid of the engine and logs them to a file in 
	~/.ipython/log named ipcontroller-###-engine-info.log.  This is 
	to make it easier to kill engines.  Fixes ticket #111.


2007-01-30  Fernando Perez  <Fernando.Perez@colorado.edu>

	* helpers/update_web2: helper script to keep our private copy of
	Twisted's web2 in sync with SVN.  We're shipping it privately so
	that our users can use an official Twisted release (>=2.5).  Once
	Twisted releases Web2 into their core distribution and this
	becomes unnecessary, we'll remove our private copy.

2007-01-27  Fernando Perez  <Fernando.Perez@colorado.edu>

	* ipdoctest.py (IPDocTestRunner): major extensions to doctest that
	add real IPython support.

2006-01-24  Brian Granger <ellisonbg@gmail.com>

	This covers commits over the last month and a half.  During this
	time the mainline development has moved to the saw branch.  From 
	here out, the saw branch should be used.  However, it should be noted
	that certain things that worked in the chainsaw branch are being
	depreciated in the saw branch:
	
	* All the vanilla protocols are being depreciated.  This is because
	they do not propagate errors properly.  With this said, they should
	still work for most things our interactive RemoteController class
	still uses this protocol.  Until we have a full PB or XML-RPC
	replacement for this client, the vanilla client will remain the
	default in kernel.api.  
	
	* The global setting of a MAX_MESSAGE_SIZE variable for network
	protocols.  Currently, this should be set internally to each specific
	network protocol.  I have created a pbconfig.py file that sets it 
	for any PB users.
	
	The saw branch has significant changes to the way errors are handled:
	
	* Errors are now propagated fully in the PB protocols and we now have
	tests to make sure that errors do propagate properly.
	