@@ -1,3 +1,10 @@
+2007-02-15  Brian Granger <ellisonbg@gmail.com>
+
+	* kernel.pbutil, kernel.enginepb, kernel.multienginepb: added
+	rigorous message size testing.  Now any push/pull/scater/gather
+	that exceeds pbconfig.banana.SIZE_LIMIT will raise a
+	PBMessageSizeError that propagates back to the user.
+
 2007-02-13  Brian Granger <ellisonbg@gmail.com>
 
 	* Now the registerEngine method of the ControllerService takes the
